added notification popups

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -15,7 +15,7 @@ button{
     margin: auto;
     overflow: none;
     width: 50vh;
-    z-index: 1000; /* Ensure the modal appears above the overlay */
+    z-index: 9999; /* Ensure the modal appears above the overlay */
     outline: none;
     border: none;
 }
@@ -27,6 +27,25 @@ button{
     border: none;
 }
 
+
+/* notification alert modal */
+.alertModal{
+    background-color: white;
+    width: 40vh;
+    height: 25vh;
+    position: absolute !important;
+    inset: unset !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    margin: 0 0 3% 3%;
+    border-radius: 10px;
+    z-index: 1000;
+}
+
+.alertModal .modalHeader{
+    background-color: pink;
+    border-radius: 10px 10px 0 0 ;
+}
 
 
 
