--- a/src/style/home.css
+++ b/src/style/home.css
@@ -328,7 +328,7 @@
     background-color: black;
     border-radius: 10px;
     margin: 30px 0px;
-    width: 70%;
+    width: 60%;
 }
 
 .userProfilePostContainer .userPostContainer img{
@@ -349,7 +349,7 @@
     padding: 0px 20px;
 }
 
-.userHeaderContainer .nameDateContainer h1:hover, .friendListContainer h2:hover{
+.userHeaderContainer .nameDateContainer h1:hover, .friendListContainer h2:hover, .commentModal .nameDateContainer h2:hover{
     color: #b16a00;
     cursor: pointer;
 }
@@ -429,6 +429,7 @@
 
 .commentModal .nameDateContainer h2{
     font-size: 30px;
+    text-decoration: underline;
 }
 
 .commentModal .nameDateContainer h2, .commentModal .nameDateContainer p, .captionContainer h2, .captionContainer p{
