--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,3 +1,7 @@
+/* 
+    button color: #f8a526
+*/
+
 /* the whole page */
 .homeContainer .pageContainer{
     background-color: #ffcf88;
@@ -7,8 +11,8 @@
 }
 
 /* feed container */
-.homeContainer .feedContainer{
-    -ms-overflow-style: none;  /* IE and Edge */
+.homeContainer .postOuterContainer{
+    -ms-overflow-style: none;
     align-items: center;
     background-color: #f8a526;
     border-radius: 10px;
@@ -22,85 +26,77 @@
 }
 
 /* Hide scrollbar for WebKit-based browsers (Chrome, Safari) */
-.homeContainer .feedContainer::-webkit-scrollbar {
+.homeContainer .postOuterContainer::-webkit-scrollbar {
     display: none;
 }
 
 /* each post */
 .pageContainer .postContainer{
-    /* padding: 0px 20px; */
-    border-radius: 10px;
     border-radius: 10px;
     margin: 15px;
     width: 95%;
 }
 
-.postContainer .postImgContainer{
-    background-color: black;
-}
-
-.pageContainer .postContainer .imgPost{
-    background-color: black ;
-    display: block; /* Remove any potential whitespace */
-    margin: auto; /* Center horizontally */
-    width: 50%;
-}
-
-/* userpfp, name, and date on post */
-.pageContainer .userHeaderContainer{
+/* 
+    !ONLY USED FOR HOMEPAGE FEED POST
+    userpfp, name, and date on post 
+*/
+.pageContainer .postHeaderContainer{
     align-items: center;
     background-color: rgb(221, 221, 221);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.5);
+    box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.8);
+    border-top: 5px solid rgb(173, 173, 173);
+    border-right: 5px solid rgb(173, 173, 173);
+    border-left: 5px solid rgb(173, 173, 173);
     cursor: pointer;
     display: flex;
     gap: 20px;
-    padding: 10px 20px;
+    padding: 15px 20px;
 }
 
-.pageContainer .userHeaderContainer h1{
+.pageContainer .postHeaderContainer h1{
     font-size: 30px;
     margin-bottom: -5px;
     text-decoration: underline;
 }
 
-.pageContainer .userHeaderContainer .imgContainer {
-    padding-bottom: 10%; /* This creates a square container */
-    position: relative; /* This is necessary for the padding-bottom trick */
-    width: 10%; /* Adjust percentage as needed */
+.pageContainer .postHeaderContainer .imgContainer {
+    padding-bottom: 13%; 
+    position: relative; 
+    width: 13%; 
 }
 
-.pageContainer .userHeaderContainer .imgContainer img {
+.pageContainer .postHeaderContainer .imgContainer img {
     border-radius: 500px; 
     border: 3px rgb(173, 173, 173) solid;
     height: 100%;
     left: 0;
-    object-fit: cover; /* Ensures the image covers the container without distortion */
+    object-fit: cover; 
     position: absolute;
     top: 0;
     width: 100%;
 }
 
-.userHeaderContainer .imgContainer img:hover, #friendPfp:hover, .matchedUserOuterContainer img:hover{
+.postHeaderContainer .imgContainer img:hover, #friendPfp:hover, .matchedUserOuterContainer img:hover{
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.4;
 }
 
-/* title of post */
-.postContainer2 h2{
-    font-size: 35px;
-    margin-bottom: -0.5%;
-    padding: 3% 20px 0px;
+/* !USED FOR ALL IMG ON A POST */
+.postImgContainer{
+    background-color: #201D1F;
+    box-shadow: inset 5px 0 6px rgba(0, 0, 0, 0.8),
+                inset -5px 0 6px rgba(0, 0, 0, 0.8);  
+    border-right: 5px solid rgb(173, 173, 173);
+    border-left: 5px solid rgb(173, 173, 173); 
 }
 
-.postBodyContainer{
-    /* Left, right, and bottom inner shadow */
-    background-color: rgb(221, 221, 221);
-    border-radius: 0px 0px 10px 10px;
-    box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
-    padding-left: 20px;
-    padding-top: 10px;
+.pageContainer .postContainer .imgPost{
+    display: block;
+    margin: auto; 
+    width: 60%;
 }
 
 .postBodyContainer h2, .postBodyContainer p{
@@ -108,26 +104,47 @@
     padding: 0;
 }
 
-.postBodyContainer #postDesc{
-    padding: 0 100px 30px 0;
-}
-
-.postBodyContainer #postLikes{
-    font-size: 30px;
+.postBodyContainer .postDesc{
+    padding-bottom: 30px;
 }
 
 /* like and comment btn container */
 .footerContainer{
     align-items: center;
     display: flex;
+    gap: 10px;
     justify-content: flex-end;
-    padding: 10px 20px;
+    width: 100%;
 }
 
-.footerContainer .icons{
+.likeComContainer{
+    align-items: center;
+    background-color: #f8a526;
+    border-radius: 10px;
+    border: black solid 2px;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+    width: 10%;
+}
+
+.likeComContainer:hover{
+    color: white;
+    background-color: #a76400;
     cursor: pointer;
-    height: 10%;
-    width: 6%;
+}
+
+.likeComContainer p{
+    font-size: 30px;
+    width: 50%;
+    text-align: center;
+}
+
+.likeComContainer .icons{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    width: 50%;
 }
 
 /* modal when the user creates a new post */
@@ -152,13 +169,6 @@
     font-size: 20px;
     justify-content: space-between;
     padding: 10px 0px;
-}
-
-.bodyModalContainer{
-    display: flex;
-    flex-direction: column;
-    height: 70vh;
-    /* justify-content: center; */
 }
 
 .modalHeader button{
@@ -220,13 +230,14 @@
 
 .newPost img{
     width: 95%;
+    height: 90%;
 }
 
 .newPostContainer{
     display: flex;
     flex-direction: row;
     gap: 20px;
-    height: 450px;
+    height: 45vh;
     padding: 3% 0;
     width: 90%;
 }
@@ -252,7 +263,7 @@
     border-radius: 10px;
     height: 90vh;
     margin: auto;
-    width: 100vh;
+    width: 140vh;
     z-index: 1000;
 }
 
@@ -264,15 +275,7 @@
     padding: 20px 0px;
 }
 
-.userProfileModal .descContainerSide, .userProfileModalInFriend .descContainerSide{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: space-between;
-    width: 30%;
-}
-
-.userProfileModal .profileContainer img, .userProfileModalInFriend img{
+.userPfp{
     border-radius: 500px;
     border: 3px rgb(173, 173, 173) solid;
     width: 20%;
@@ -283,14 +286,13 @@
     border-left: 2px solid black;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    gap: 10px;
     justify-content: space-between;
     padding-left: 10px;
-    width: 100%;
+    width: 30%;
 }
 
 .profileDescContainer #userDesc{
-    /* height: 40%; */
     margin: 10px 0;
     overflow-x: hidden;
     overflow-y: auto;
@@ -321,6 +323,7 @@
     background-color: #af741c; 
 }
 
+/* post in the profile popup */
 .userBodyModalContainer .userProfilePostContainer{
     align-items: center;
     display: flex;
@@ -342,13 +345,19 @@
     width: 70%;
 }
 
-.userProfilePostContainer .nameDateContainer{
+/* !USED FOR ALL PROFILES */
+.userProfilePostContainer .nameDateContainer, .userPostContainer .nameDateContainer{
     align-items: center;
     background-color: rgb(221, 221, 221);
+    border-left: 5px solid rgb(173, 173, 173);
+    border-right: 5px solid rgb(173, 173, 173);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.5);
+    border-top: 5px solid rgb(173, 173, 173);
+    box-shadow: inset 0 5px 6px rgba(0, 0, 0, 0.8);
+    cursor: pointer;
     display: flex;
+    gap: 20px;
     justify-content: space-between;
     padding: 0px 20px;
 }
@@ -358,11 +367,18 @@
     cursor: pointer;
 }
 
-/* title and desc of the post */
-.userProfilePostContainer .postBodyContainer{
+/*  title and desc of the post
+    !USED FOR ALL POST
+ */
+.postBodyContainer{
+    background-color: rgb(221, 221, 221);
     border-radius: 0px 0px 10px 10px;
-    box-shadow: inset 0 -4px 6px rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
+    box-shadow: inset -5px -4px 6px rgba(0, 0, 0, 0.5),
+                inset 5px 0 6px rgba(0, 0, 0, 0.5);
+    padding: 10px 20px 20px;
+    border-bottom: 5px solid rgb(173, 173, 173);
+    border-right: 5px solid rgb(173, 173, 173);
+    border-left: 5px solid rgb(173, 173, 173);
 }
 
 .postBodyContainer h2{
