--- a/src/style/home.css
+++ b/src/style/home.css
@@ -390,9 +390,9 @@
 .commentModal{
     /* background-color: white; */
     border-radius: 10px;
-    height: 90vh;
+    height: 95vh;
     margin: auto;
-    overflow: hidden !important;
+    /* overflow: hidden !important; */
     width: 70vw;
     z-index: 1000; /* Ensure the modal appears above the overlay */
 }
@@ -473,12 +473,7 @@
     background-color: white;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     padding: 20px;
-}
-
-.commentContainer h1{
-    margin: -5px;
 }
 
 .commentContainer .comments{
@@ -507,10 +502,23 @@
     cursor: pointer;
 }
 
+.commentContainer .pfpNameContainer{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.pfpNameContainer img{
+    border-radius: 500px;
+    border: 2px rgb(173, 173, 173) solid;
+    height: 10%;
+    width: 10%;
+}
+
 .commentDateContainer{
     background-color: #ffcf88;
     border-radius: 0 10px 10px;
-    margin: -15px 10px 30px 0;
+    margin: 0px 10px 30px 0;
     padding: 5px 10px;
 }
 
