--- a/src/style/friend.css
+++ b/src/style/friend.css
@@ -102,8 +102,7 @@
 
 .matchUserContainer h1{
     cursor: pointer;
-    margin-bottom: -3%;
-    margin-top: -3%;
+    margin: 0;
 }
 
 .matchUserContainer h1:hover{
@@ -113,14 +112,16 @@
 .matchUserContainer .userDescOuterContainer, .friendListContainer .userDescOuterContainer{
     display: flex;
     flex-direction: column;
-    height: 80%;
-    justify-content: space-around;
+    height: 70%;
+    justify-content: space-between;
+    /* background-color: pink; */
     overflow: hidden; 
     text-overflow: ellipsis;
+    padding-left: 5px;
 }
 
-.matchUserContainer .userDescOuterContainer p, .friendListContainer .userDescOuterContainer p{
-    margin: 5px 0 0;
+.matchUserContainer .userDescOuterContainer p, .friendListContainer .userDescOuterContainer p, .matchUserContainer .userDescOuterContainer h3{
+    margin: 0;
 }
 
 #friendPfp{
@@ -228,7 +229,6 @@
 
 .friendSection h2{
     font-size: 30px;
-    text-decoration: underline;
     margin: 0;
     padding: 0;
 }
