--- a/src/style/profile.css
+++ b/src/style/profile.css
@@ -74,11 +74,11 @@
     flex-direction: column;
 }
 
-.userFeedContainer .userPostContainer{
+.profilePageContainer .userFeedContainer .userPostContainer{
     background-color: black;
     border-radius: 10px;
     margin: 30px 0px;
-    width: 60%;
+    width: 120%;
 }
 
 .userFeedContainer .userPostContainer img{
